[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Sprites/interactables/elevator.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/elevatorButton.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.87573, 3.03592 )

[node name="elevatorButton" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.496061, -1.5874 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
hframes = 7
frame = 4

[node name="usePrompt" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.520865, -6.3248 )
[connection signal="body_entered" from="." to="." method="_on_elevatorButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_elevatorButton_body_exited"]
